force-app/main/default/objects/Lead/fields/Autorizacion_RGPD__c.field-meta.xml
<CustomField>
    <fullName>Autorizacion_RGPD__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Autorización RGPD</label>
    <type>Checkbox</type>
</CustomField>