force-app/main/default/objects/Lead/fields/Dif_Dias_Contactado_Fecha_Actual__c.field-meta.xml
<CustomField>
    <fullName>Dif_Dias_Contactado_Fecha_Actual__c</fullName>
    <label>Dif Dias Contactado - Fecha Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>