force-app/main/default/objects/Lead/fields/Email_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Email_Cuenta__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Cuenta</label>
    <type>Text</type>
</CustomField>