force-app/main/default/objects/Lead/fields/ERUM_Canal_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Canal_de_Origen__c</fullName>
    <label>Canal de Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERUM_Canal_de_Origen</valueSetName>
    </valueSet>
</CustomField>