force-app/main/default/objects/Lead/fields/ERUM_CIF_Europeo__c.field-meta.xml
<CustomField>
    <fullName>ERUM_CIF_Europeo__c</fullName>
    <label>CIF Europeo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>