force-app/main/default/objects/Lead/fields/ERUM_Departamento__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamento</valueSetName>
    </valueSet>
</CustomField>