force-app/main/default/objects/Lead/fields/ERUM_Fecha_autorizacion_RGPD__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_autorizacion_RGPD__c</fullName>
    <formula>IF( Autorizacion_RGPD__c = TRUE, TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha autorización RGPD</label>
    <type>Date</type>
</CustomField>