force-app/main/default/objects/Lead/fields/ERUM_Fecha_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_de_Contacto__c</fullName>
    <formula>IF(ISPICKVAL(Status  , &apos;Contactado&apos;),TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Contacto</label>
    <type>Date</type>
</CustomField>