force-app/main/default/objects/Lead/fields/ERUM_Fecha_Fin_Contrato_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_Fin_Contrato_Proveedor__c</fullName>
    <label>Fecha Fin Contrato Proveedor</label>
    <type>Date</type>
</CustomField>