force-app/main/default/objects/Lead/fields/ERUM_Idioma__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Idioma__c</fullName>
    <label>Idioma</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Idioma</valueSetName>
    </valueSet>
</CustomField>