force-app/main/default/objects/Lead/fields/ERUM_Mas_detalles__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Mas_detalles__c</fullName>
    <label>Más detalles</label>
    <type>TextArea</type>
</CustomField>