force-app/main/default/objects/Lead/fields/ERUM_Razon_de_desestimacion__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Razon_de_desestimacion__c</fullName>
    <label>Razón de desestimación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No cubre necesidades</fullName>
            </value>
            <value>
                <fullName>No es la persona de contacto</fullName>
            </value>
            <value>
                <fullName>No es el Departamento responsable</fullName>
            </value>
            <value>
                <fullName>Tiene proveedor con contrato actual</fullName>
            </value>
            <value>
                <fullName>La informacón no está actualizada</fullName>
            </value>
            <value>
                <fullName>No responde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>