force-app/main/default/objects/Lead/fields/ERUM_Recomendado_por__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Recomendado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recomendado por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>