force-app/main/default/objects/Lead/fields/ERUM_URL_Canal_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>ERUM_URL_Canal_de_Origen__c</fullName>
    <label>URL Canal de Origen</label>
    <type>Url</type>
</CustomField>