force-app/main/default/objects/Lead/fields/Fecha_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion__c</fullName>
    <formula>IF(ISPICKVAL(Status , &apos;Nuevo&apos;),TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación</label>
    <type>Date</type>
</CustomField>