force-app/main/default/objects/Lead/fields/Inter_s__c.field-meta.xml
<CustomField>
    <fullName>Inter_s__c</fullName>
    <label>Interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sostenibilidad</fullName>
            </value>
            <value>
                <fullName>Inyección Sostenible</fullName>
            </value>
            <value>
                <fullName>Medio Ambiente</fullName>
            </value>
            <value>
                <fullName>Seguridad Vial</fullName>
            </value>
            <value>
                <fullName>Perchas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>