force-app/main/default/objects/Lead/fields/Negociaci_n__c.field-meta.xml
<CustomField>
    <fullName>Negociaci_n__c</fullName>
    <formula>ERUM_Fecha_Fin_Contrato_Proveedor__c -182</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negociación</label>
    <type>Date</type>
</CustomField>