force-app/main/default/objects/Lead/recordTypes/LeadRetail.recordType-meta.xml
<RecordType>
    <fullName>LeadRetail</fullName>
    <active>true</active>
    <businessProcess>Retail</businessProcess>
    <description>Tipo de registro para almacenar candidatos pertenecientes a la empresa de retail</description>
    <label>Retail</label>
</RecordType>