force-app/main/default/objects/Lead/recordTypes/LeadSeguridadVial.recordType-meta.xml
<RecordType>
    <fullName>LeadSeguridadVial</fullName>
    <active>true</active>
    <businessProcess>Seguridad Vial</businessProcess>
    <description>Tipo de registro para almacenar candidatos pertenecientes a la empresa de seguridad vial</description>
    <label>Seguridad Vial</label>
</RecordType>