force-app/main/default/objects/Lead/validationRules/Obli_si_canal_de_origen_es_recomendacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Obli_si_canal_de_origen_es_recomendacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(ERUM_Canal_de_Origen__c , &apos;Recomendación&apos;),ISBLANK( ERUM_Recomendado_por__c )) ||AND(ISPICKVAL(ERUM_Canal_de_Origen__c , &apos;Gerencia&apos;),ISBLANK( ERUM_Recomendado_por__c ))</errorConditionFormula>
    <errorDisplayField>ERUM_Recomendado_por__c</errorDisplayField>
    <errorMessage>Especifica por favor</errorMessage>
</ValidationRule>