force-app/main/default/objects/Lead/validationRules/Obligatorio_si_estado_desestimado.validationRule-meta.xml
<ValidationRule>
    <fullName>Obligatorio_si_estado_desestimado</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Desestimado&quot;) &amp;&amp;
ISBLANK(TEXT(ERUM_Razon_de_desestimacion__c))</errorConditionFormula>
    <errorDisplayField>ERUM_Razon_de_desestimacion__c</errorDisplayField>
    <errorMessage>Especifica por favor</errorMessage>
</ValidationRule>