force-app/main/default/objects/Lead/listViews/Totos_los_candidatos.listView-meta.xml
<ListView>
    <fullName>Totos_los_candidatos</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Totos los candidatos</label>
</ListView>